# blender-model-optimizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  blender_manifest.toml  build.py  pyproject.toml  pyrightconfig.json
.claude/: BEST_PRACTICES.md  CLAUDE.md  settings.json
.github/workflows/: release.yml
ai_model_optimizer/: __init__.py  panels.py  properties.py  utils.py
blender_model_optimizer/: __init__.py  geometry.py  materials.py  operators.py  panels.py  properties.py  utils.py
docs/plan/: topology-improvements.md
docs/plans/: 2026-03-28-progress-indicator-design.md  2026-03-28-progress-indicator-plan.md  2026-04-03-interior-face-removal-design.md  2026-04-03-interior-face-removal-plan.md  2026-04-04-advanced-optimizations-design.md  2026-04-04-advanced-optimizations-plan.md  2026-04-04-estimated-glb-size-design.md  2026-04-04-estimated-glb-size-plan.md  2026-04-04-multi-file-split-design.md  2026-04-04-multi-file-split-plan.md
docs/superpowers/: HANDOFF-2026-04-20.md
docs/superpowers/ideas/: 2026-04-20-texture-bleed-fix-options.md
docs/superpowers/plans/: 2026-04-18-decimate-multi-pass.md  2026-04-18-remove-interior-raycast-tears.md  2026-04-18-topology-improvements.md  2026-04-19-hard-uv-seam-constraint.md  2026-04-19-planar-post-pass.md  2026-04-19-uv-seam-protection-toggle.md  2026-04-20-vertex-group-seam-weighting.md
docs/superpowers/specs/: 2026-04-18-remove-interior-raycast-tears-design.md  2026-04-18-topology-improvements-design.md  2026-04-19-hard-uv-seam-constraint-design.md  2026-04-20-manifold-method-enum-design.md  2026-04-20-vertex-group-seam-weighting-design.md
scripts/: validate.ps1  validate.sh  verify_fix_geometry_ops.py
src/: __init__.py  geometry.py  materials.py  model-optimizer-addon.py  operators.py  panels.py  properties.py  textures.py  utils.py
tests/: conftest.py  test_build.py  test_defaults.py  test_enum_drift.py  test_estimate_size.py  test_export_format.py  test_extension_build.py  test_saveable_props_drift.py
